# visualizeBGW

./: .gitignore  .pylintrc  README.md  documentation.md  environment.yml  pyproject.toml  run_tests.sh
examples/: README.md
examples/MoS2/: notebook.ipynb  script.sh
examples/MoS2/01-scf/: scf.in
examples/MoS2/02-wfn/: kgrid.in  pw2bgw.in  wfn.in
examples/MoS2/03-wfnq/: epsilon_q0s.inp  pw2bgw.in  wfn.in
examples/MoS2/04-wfn_co/: kgrid.in  wfn.in
examples/MoS2/05-wfnq_co/: kgrid.in  pw2bgw.in  wfn.in
examples/MoS2/06-wfn_fi/: kgrid.in  pw2bgw.in  wfn.in
examples/MoS2/07-epsilon/: epsilon.inp
examples/MoS2/08-sigma/: sigma.inp
examples/MoS2/09-epsilon_co/: epsilon.inp
examples/MoS2/10-inteqp/: inteqp.inp
examples/MoS2/11-kernel/: kernel.inp
examples/MoS2/12-absorption/: absorption.inp
examples/Si/: notebook.ipynb  script.sh
examples/Si/01-scf/: scf.in
examples/Si/02-wfn/: kgrid.in  pw2bgw.in  wfn.in
examples/Si/03-wfnq/: kgrid.in  pw2bgw.in  wfn.in
examples/Si/04-wfn_fi/: kgrid.in  pw2bgw.in  wfn.in
examples/Si/05-epsilon/: epsilon.inp
examples/Si/06-sigma/: sigma.inp
examples/Si/07-kernel/: kernel.inp
examples/Si/08-absorption/: absorption.inp
src/visualizeBGW/: __init__.py
src/visualizeBGW/analysis/: berkeleygw_processing.py  units.py
src/visualizeBGW/gui/: main.py  main_window.py  matplotlib_widget.py
src/visualizeBGW/gui/pages/: bandstructure_page.py  (+7 more)
src/visualizeBGW/io/: berkeleygw_exports.py  berkeleygw_readers.py
src/visualizeBGW/plotting/: berkeleygw_plots.py
tests/: dummies.py  test_analysis.py  test_io.py
